# Text_Summarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_DEPLOYMENT.md  app.py  docker-compose.yml  gradio_app.py  main.py  project_template.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  test_api.py
.github/workflows/: ci.yml
config/: config.yaml  params.yaml
notebooks/: Colab_GPU_Run.ipynb
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py  prediction.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/constants/: constants.py
src/textSummarizer/entity/: config_entity.py
src/textSummarizer/logging/: logger.py
src/textSummarizer/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/textSummarizer/utils/: common.py
tests/: test_api.py  test_integration.py
