# ============================================================================
# pyproject.toml
# ============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textSummarizer"
version = "0.0.1"
description = "A modern NLP text summarization package with MLOps best practices"
readme = "README.md"
authors = [
    { name = "Md. Ashaduzzaman Sarker", email = "ashaduzzaman2505@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
        "transformers[sentencepiece]",
        "datasets",
        "tokenizers",
        "sentencepiece",
        "evaluate",
        "rouge-score",
        "sacrebleu",
        "torch",
        "torchvision",
        "accelerate",
        "pandas",
        "numpy",
        "pyarrow",
        "nltk",
        "tqdm",
        "PyYAML",
        "python-box",
        "ensure",
        "py7zr",
        "fastapi",
        "uvicorn[standard]",
        "pydantic",
        "python-multipart",
        "gradio",
        "Jinja2",
        "huggingface_hub",
        "requests",
        "boto3",
        "mypy-boto3-s3",
        "matplotlib",
        "seaborn",
        "tensorboard",
        "mlflow",
        "dvc",
        "dvc[s3]",
        "pytest",
        "pytest-cov",
        "flake8",
        "black",
        "isort",
        "mypy",
        "notebook"
]

[project.urls]
Homepage = "https://github.com/ashaduzzaman-sarker/MLOps_Template"
"Bug Tracker" = "https://github.com/ashaduzzaman-sarker/MLOps_Template/issues"

[tool.setuptools.packages.find]
where = ["src"]