# ============================================================================
# pyproject.toml
# ============================================================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textSummarizer"
version = "0.0.1"
description = "A modern NLP text summarization package with MLOps best practices"
readme = "README.md"
authors = [
    { name = "Md. Ashaduzzaman Sarker", email = "ashaduzzaman2505@gmail.com" }
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
        "transformers>=4.57.1",
        "datasets>=4.3.0",
        "tokenizers>=0.22.1",
        "sentencepiece>=0.2.1",
        "evaluate>=0.4.6",
        "rouge-score>=0.1.2",
        "bert-score>=0.3.13",
        "sacrebleu>=2.5.1",
        "torch>=2.9.0",
        "torchvision>=0.24.0",
        "accelerate>=1.11.0",
        "pandas>=2.3.3",
        "numpy>=2.2.6",
        "pyarrow>=21.0.0",
        "nltk>=3.9.2",
        "tqdm>=4.67.1",
        "PyYAML>=6.0.3",
        "python-box>=7.3.2",
        "ensure>=1.0.4",
        "py7zr>=1.0.0",
        "fastapi>=0.120.1",
        "uvicorn[standard]>=0.38.0",
        "pydantic>=2.11.10",
        "python-multipart>=0.0.20",
        "gradio>=5.49.1",
        "Jinja2>=3.1.6",
        "gunicorn>=23.0.0",
        "huggingface_hub>=0.36.0",
        "requests>=2.32.5",
        "boto3>=1.40.49",
        "mypy-boto3-s3>=1.40.26",
        "matplotlib>=3.10.7",
        "seaborn>=0.13.2",
        "tensorboard>=2.20.0",
        "mlflow>=3.5.1",
        "dvc>=3.63.0",
        "dvc[s3]>=3.2.2",
        "pytest>=8.4.2",
        "pytest-cov>=7.0.0",
        "pytest-asyncio>=1.2.0",
        "flake8>=7.3.0",
        "black>=25.9.0",
        "isort>=7.0.0",
        "mypy>=1.18.2",
        "notebook>=7.4.7 ",
        "httpx>=0.28.1"
]

[project.urls]
Homepage = "https://github.com/ashaduzzaman-sarker/MLOps_Template"
"Bug Tracker" = "https://github.com/ashaduzzaman-sarker/MLOps_Template/issues"

[tool.setuptools.packages.find]
where = ["src"]